tests/output/self_hosted/not_hashable_error.txt
tests/not_hashable_error.oomph:8: error: type 'Foo' has no method named 'hash'

    print(new Foo().hash())
                   ^^^^^

